fix contrast issues

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -103,8 +103,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
-    background: url(../img/showcase.jpeg);
-    background: rgba(68, 68, 68, 0.9), url(../img/showcase.jpeg);
+    background: url(../img/freshCut.png);
+    background: rgba(68, 68, 68, 0.9), url(../img/freshCut.png);
     background-attachment: fixed;
     background-size: cover; }
 
@@ -125,7 +125,7 @@ h3 {
     background: rgba(73, 73, 73, 0.5); }
 
 a {
-  color: #fff;
+  color: #FFFFE6;
   text-decoration: none; }
 
 header {
@@ -134,7 +134,7 @@ header {
   width: 100%; }
 
 .text-secondary {
-  color: #eece1a; }
+  color: #10c14e; }
 
 main {
   padding: 4rem;
